Minor warnings fixes Add Clone option Add difficult flag option